--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,40 @@ body{
   justify-content: center;
   font-family: 'Courier New', Courier, monospace;
 }
+
+.image2{
+  width: 100%;
+  height: auto;
+}
+
+.centralText{
+  font-size: 50px;
+  color: black;
+  font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.centralTextDiv{
+  padding: 5%;
+}
+
+.footerText{
+  font-size: 30px;
+  color: black;
+  font-family: 'Courier New', Courier, monospace;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.footer{
+  padding: 3%;
+  float: right;
+  display: flex;
+  justify-content: center;
+  background-color: rgb(172, 160, 160);
+  width: 100%;
+  margin-top: auto;
+  
+}
