--- a/src/App.css
+++ b/src/App.css
@@ -118,3 +118,93 @@ body{
   margin-top: auto;
   
 }
+
+.products{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 1fr;
+}
+
+.product{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.product img{
+  /* max-width: 33.33333%; */
+  /* max-height: 60%; */
+  height: 60%;
+  width: 33.3333%;
+}
+
+@media (max-width: 768px) { 
+  .container {
+    grid-template-columns: none;
+  }
+}
+
+.image{
+  border-radius: 8px;
+}
+
+.save{
+  height: 10%;
+  width: 10%;
+  border-radius: 3px;
+  background-color: rgb(235, 218, 218);
+}
+
+.name{
+  font-size: 16px;
+  color: black;
+  padding: 1%;
+}
+
+.price{
+  font-size: 16px;
+  color: black;
+  padding: 1%;
+}
+
+.numFav{
+  background-color: rgb(255, 58, 58);
+  margin-left: 15%;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.fav{
+  display: flex;
+}
+
+
+.upperFav{
+  color: white;
+  font-family: 'Garmond', 'serif';
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1%;
+}
+
+.upperText{
+  padding: 4%;
+}
+
+.favProducts{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.favorites-body{
+  min-height: 100vh;
+}
+
+.unsave{
+  height: 10%;
+  width: 10%;
+  border-radius: 3px;
+  background-color: rgb(235, 218, 218);
+}
